changes perms, add comment # for no reason

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -1,4 +1,4 @@
-OUT_FILE="$BASE_DIR/plots/wx.html"
+# OUT_FILE="$BASE_DIR/plots/wx.html"
 
 <!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\" \"http://www.w3.org/TR/html4/strict.dtd\">
 <html> <head> <title> danger! test product! </title> </head> 
