do the title better

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -2,8 +2,8 @@
 <html> <head> <title> danger! test product! </title> </head> 
 <body  bgcolor="#000000" text="#206cff" link="#0099ff" vlink="#00ffff"> 
 <center>
-<br> Weather from Berlin.
-<br> <br>
+<br><h1>Weather from Berlin</h1><h2>(Moabit).</h2>
+<br> 
 <br> Current Conditions (updates every ~60s):
 
 <table borders>
