--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -16,9 +16,11 @@
 
 <br>
 <img src="exttemp.png"><br><br>
+<img src="extdewtemp.png"><br><br>
 <img src="exthum.png"><br><br>
 <img src="pressure.png"><br><br>
 <img src="inttemp.png"><br><br>
+<img src="intdewtemp.png"><br><br>
 <img src="inthumsht.png"><br><br>
 <img src="pitemp.png"><br><br>
 </center>
