hook up dewpoint graphs

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -18,6 +18,7 @@
 
 <br>
 <img src="exttemp.png"><br><br>
+<img src="extdewtemp.png"><br><br>
 <img src="exthum.png"><br><br>
 <img src="pressure.png"><br><br>
 <img src="pitemp.png"><br><br>
