more aquality + notes

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -22,6 +22,7 @@
 <img src="exthum.png"><br><br>
 <img src="pressure.png"><br><br>
 <img src="pitemp.png"><br><br>
+<img src="airquality.png"><br><br>
 </center>
 <br> <br>
 </body> </html>
