the 13 year old test status is probably superfluous at this point

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title> danger! test product! </title>
+<title>Weather Data for a Berlin Balcony</title>
 </head>
 <body  bgcolor="#000000" text="#206cff" link="#0099ff" vlink="#00ffff"> 
 <center>
