hook up new graphs to html page

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -20,6 +20,8 @@
 <img src="exttemp.png"><br><br>
 <img src="extdewtemp.png"><br><br>
 <img src="exthum.png"><br><br>
+<img src="abshum.png"><br><br>
+<img src="heatindex.png"><br><br>
 <img src="pressure.png"><br><br>
 <img src="pitemp.png"><br><br>
 <img src="airquality.png"><br><br>
