--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -11,9 +11,10 @@
 <br> Current Conditions (updates every ~60s):
 
 <table borders>
-<tr><td>Ext Temp:</td> <td>EXTTEMP°C</td> <td>Ext. Rel. Humidity:</td> <td>EXTHUM %</td></tr>
-<tr><td>Pressure:</td> <td>REL_PRESS kPa</td> <td>Pi Temp:</td>  <td>PITEMP°C</td></tr>
-<tr><td>Dew Point:</td> <td>EXTDP°C</td> <td>Last Update:</td>  <td>DATE</td></tr>
+<tr><td>Ext Temp:</td> <td>EXTTEMP °C</td> <td>Ext. Rel. Humidity:</td> <td>EXTHUM %</td></tr>
+<tr><td>Absolute Humidity:</td> <td>ABSHUM g/m³</td> <td>Heat Index:</td> <td>HTIDX °C</td></tr>
+<tr><td>Pressure:</td> <td>REL_PRESS kPa</td> <td>Pi Temp:</td>  <td>PITEMP °C</td></tr>
+<tr><td>Dew Point:</td> <td>EXTDP °C</td> <td>Last Update:</td>  <td>DATE</td></tr>
 </table>
 
 <br>
