--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -7,7 +7,7 @@
 <body  bgcolor="#000000" text="#206cff" link="#0099ff" vlink="#00ffff"> 
 <center>
 <br><h1>Weather from Augsburg, Germany</h1>
-<a href="https://github.com/mcthoren/weather_tools/blob/master/README">More info on the weather notes page.</a><br>
+See <a href="https://github.com/mcthoren/weather_tools/">here</a> for more info.<br>
 <br> Current Conditions (updates every ~60s):
 
 <table borders>
