--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="60">
 <title>Weather Data for a Balcony in Augsburg, Germany</title>
 </head>
 <body  bgcolor="#000000" text="#206cff" link="#0099ff" vlink="#00ffff"> 
