dew point becomes more relevant. break it out into it's own graph

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -23,6 +23,7 @@ See <a href="https://github.com/mcthoren/weather_tools/">here</a> for more info.
 <br>
 <img src="exttemp.png"><br><br>
 <img src="extdewtemp.png"><br><br>
+<img src="extdew.png"><br><br>
 <img src="exthum.png"><br><br>
 <img src="abshum.png"><br><br>
 <img src="heatindex.png"><br><br>
