full css and ico links

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="60">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="dd.css">
+<link rel="stylesheet" type="text/css" href="https://darkdata.org/dd.css">
+<link rel="icon" href="https://slackology.net/favicon.ico" type="image/png"/>
 <title>Weather Data for a Balcony in Augsburg, Germany</title>
 </head>
 <body>
