first stab at diff titles for the diff stations.

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -10,7 +10,7 @@
 </head>
 <body>
 <center>
-<br><h1>Weather from Augsburg, Germany</h1>
+<br><h1>TITLE</h1>
 See <a href="https://github.com/mcthoren/weather_tools/">here</a> for more info.<br>
 <br> Current Conditions (updates every ~60s):
 
