change the actual title too, while we're at it.

--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://darkdata.org/dd.css">
 <link rel="icon" href="https://slackology.net/favicon.ico" type="image/png"/>
-<title>Weather Data for Augsburg, Germany</title>
+<title>TITLE</title>
 </head>
 <body>
 <center>
