--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -25,6 +25,7 @@ See <a href="https://github.com/mcthoren/weather_tools/">here</a> for more info.
 <img src="exttemp.png"><br><br>
 <img src="extdewtemp.png"><br><br>
 <img src="extdew.png"><br><br>
+<img src="extwetbulb.png"><br><br>
 <img src="exthum.png"><br><br>
 <img src="abshum.png"><br><br>
 <img src="heatindex.png"><br><br>
