--- a/wx_index.html.template
+++ b/wx_index.html.template
@@ -18,7 +18,8 @@ See <a href="https://github.com/mcthoren/weather_tools/">here</a> for more info.
 <tr><td>Temp:</td> <td>EXTTEMP °C</td> <td>Rel. Humidity:</td> <td>EXTHUM %</td></tr>
 <tr><td>Absolute Humidity:</td> <td>ABSHUM g/m³</td> <td>Heat Index:</td> <td>HTIDX °C</td></tr>
 <tr><td>Pressure:</td> <td>REL_PRESS kPa</td> <td>Pi Temp:</td>  <td>PITEMP °C</td></tr>
-<tr><td>Dew Point:</td> <td>EXTDP °C</td> <td>Last Update:</td>  <td>DATE</td></tr>
+<tr><td>Dew Point:</td> <td>EXTDP °C</td> <td>Wet-Bulb Temp:</td> <td>WBT °C</td></tr>
+<tr><td>Last Update:</td>  <td>DATE</td></tr>
 </table>
 
 <br>
